Fixed contrast error of header

--- a/education-page/education.css
+++ b/education-page/education.css
@@ -17,7 +17,6 @@ header {
     flex-direction: column;
     padding: 1vh 1vw;
     background-color: cadetblue;
-    color: beige;
     font-size: 1vw;
 }
 
